--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 
-title: Your awesome title
+title: wekreative
 email: your-email@domain.com
 description: > # this means to ignore newlines until "baseurl:"
   Write an awesome description for your new site here. You can edit this
@@ -12,6 +12,8 @@ github_username:  jekyll
 
 # Build settings
 markdown: kramdown
+sass:
+  style: compressed
 theme: minima
 gems:
   - jekyll-feed
