--- a/_config.yml
+++ b/_config.yml
@@ -6,6 +6,7 @@ baseurl: "" # the subpath of your site, e.g. /blog
 url: http://wekreative.com
 twitter_username: jekyllrb
 github_username:  jekyll
+google_analytics: UA-92996307-1
 
 # Build settings
 markdown: kramdown
